🤐 Suppress non-actionable JDK Unsafe usage warnings (#710)